@@ -19,6 +19,9 @@ master
    temporary directory for easy reuse (see #79)
  - taper settings (applied before any filtering) can now be controlled via
    config file (see #80)
+ - speed up magnitude calculation by reusing unchanged station magnitudes when
+   updating the network magnitude while changing magnitude picks on one station
+   (see #88)
 
 0.5.1
  - fix getting metadata via arclink (see #65)
